--- a/index.html
+++ b/index.html
@@ -417,9 +417,10 @@
         LowerA: [
             { name: 'Agachamento Livre', sets: 4, reps: '6-8', rest: 180, targetMuscle: 'Pernas' },
             { name: 'Leg Press 45º', sets: 4, reps: '8-10', rest: 120, targetMuscle: 'Pernas' },
-            { name: 'Levantamento Terra Romeno', sets: 4, reps: '8-10', rest: 120, targetMuscle: 'Posteriores' },
-            { name: 'Cadeira Flexora', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Posteriores' },
-            { name: 'Panturrilha em Pé', sets: 5, reps: '10-15', rest: 60, targetMuscle: 'Panturrilhas' },
+            { name: 'Afundo no Smith', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Posteriores' },
+			{ name: 'Cadeira Extensora', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Posteriores' },
+			{ name: 'Cadeira Abdutora', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Posteriores' },
+            { name: 'Panturrilha Sentado', sets: 4, reps: '10-15', rest: 60, targetMuscle: 'Panturrilhas' },
         ],
         UpperB: [
             { name: 'Barra Fixa (ou Puxada Frontal)', sets: 3, reps: '6-8', rest: 120, targetMuscle: 'Costas' },
@@ -434,11 +435,12 @@
             { name: 'Rosca Inclinada com Halteres', sets: 3, reps: '10-12', rest: 90, targetMuscle: 'Bíceps' },
         ],
         LowerB: [
-            { name: 'Agachamento Livre', sets: 4, reps: '5-6', rest: 180, targetMuscle: 'Pernas' },
-            { name: 'Levantamento Terra Convencional', sets: 4, reps: '8-10', rest: 120, targetMuscle: 'Glúteos' },
-            { name: 'Afundo com Halteres', sets: 4, reps: '8-10', rest: 120, targetMuscle: 'Pernas' },
-            { name: 'Cadeira Extensora', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Pernas' },
-            { name: 'Panturrilha Sentado', sets: 5, reps: '15-20', rest: 60, targetMuscle: 'Panturrilhas' },
+            { name: 'Agachamento Livre', sets: 3, reps: '5-6', rest: 180, targetMuscle: 'Pernas' },
+            { name: 'Levantamento Terra Romeno', sets: 4, reps: '8-10', rest: 120, targetMuscle: 'Glúteos' },
+            { name: 'Cadeira Flexora', sets: 4, reps: '8-10', rest: 120, targetMuscle: 'Pernas' },
+            { name: 'Stiff', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Pernas' },
+			{ name: 'Cadeira Adutora', sets: 3, reps: '12-15', rest: 90, targetMuscle: 'Pernas' },
+            { name: 'Panturrilha em Pé', sets: 5, reps: '15-20', rest: 60, targetMuscle: 'Panturrilhas' },
         ]
     };
 
