--- a/index.html
+++ b/index.html
@@ -412,12 +412,12 @@
             { name: 'Tríceps Coice (Unilateral)', sets: 3, reps: '8-10', rest: 90, targetMuscle: 'Tríceps' },
         ],
         LowerA: [
-            { name: 'Agachamento Livre', sets: 4, reps: '8-12', rest: 120, targetMuscle: 'Pernas' },
-            { name: 'Leg Press 45º', sets: 4, reps: '8-12', rest: 120, targetMuscle: 'Pernas' },
-            { name: 'Cadeira Extensora', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Quadriceps' },
-			{ name: 'Afundo no Smith', sets: 3, reps: '10-12', rest: 90, targetMuscle: 'Quadriceps' },
+            { name: 'Agachamento Livre', sets: 4, reps: '8-12', rest: 120, targetMuscle: 'Quadríceps' },
+            { name: 'Leg Press 45º', sets: 4, reps: '8-12', rest: 120, targetMuscle: 'Quadríceps' },
+            { name: 'Cadeira Extensora', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Quadríceps' },
+			{ name: 'Afundo no Smith', sets: 3, reps: '10-12', rest: 90, targetMuscle: 'Quadríceps' },
 			{ name: 'Agachamento Búlgaro', sets: 3, reps: '10-12', rest: 90, targetMuscle: 'Quadríceps ' },
-            { name: 'Cadeira Flexora', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Isquiotibiais' },
+            { name: 'Cadeira Flexora', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Posterior de Coxa/Gluteos' },
         ],
         UpperB: [
             { name: 'Barra Fixa (ou Puxada Frontal)', sets: 4, reps: '8-12', rest: 90, targetMuscle: 'Costas' },
@@ -429,9 +429,9 @@
             { name: 'Rosca Inclinada com Halteres', sets: 3, reps: '10-12', rest: 90, targetMuscle: 'Bíceps' },
         ],
         LowerB: [
-            { name: 'Agachamento Sumô', sets: 3, reps: '10-12', rest: 90, targetMuscle: 'Glúteos' },
-			{ name: 'Stiff', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Glúteos' },
-			{ name: 'Cadeira Adutora', sets: 3, reps: '12-15', rest: 90, targetMuscle: 'Pernas' },
+            { name: 'Agachamento Sumô', sets: 3, reps: '10-12', rest: 90, targetMuscle: 'Posterior de Coxa/Gluteos' },
+			{ name: 'Stiff', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Posterior de Coxa/Gluteos' },
+			{ name: 'Cadeira Adutora', sets: 3, reps: '12-15', rest: 90, targetMuscle: 'Adutores' },
             { name: 'Panturrilha em Pé', sets: 5, reps: '15-20', rest: 60, targetMuscle: 'Panturrilhas' },
 			{ name: 'Desenvolvimento Militar', sets: 3, reps: '8-12', rest: 90, targetMuscle: 'Ombros' },
 			{ name: 'Elevação Lateral com Halteres', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Ombros' },
