--- a/index.html
+++ b/index.html
@@ -416,8 +416,8 @@
             { name: 'Leg Press 45º', sets: 4, reps: '8-12', rest: 120, targetMuscle: 'Pernas' },
             { name: 'Cadeira Extensora', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Pernas' },
 			{ name: 'Afundo no Smith', sets: 3, reps: '10-12', rest: 90, targetMuscle: 'Pernas' },
-			{ name: 'Agachamento Búlgaro', sets: 3, reps: '10-12', rest: 90, targetMuscle: 'Pernas ' },
             { name: 'Cadeira Flexora', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Posteriores' },
+			{ name: 'Panturrilha em Sentado', sets: 4, reps: '15-20', rest: 90, targetMuscle: 'Panturrilhas ' },
         ],
         UpperB: [
             { name: 'Barra Fixa (ou Puxada Frontal)', sets: 4, reps: '8-12', rest: 90, targetMuscle: 'Costas' },
