--- a/index.html
+++ b/index.html
@@ -429,35 +429,35 @@
 <script>
     const workouts = {
                 UpperA: [
-            { name: 'Supino Inclinado com Halteres', sets: 4, reps: '8-12', rest: 90, targetMuscle: 'Peito' },
-            { name: 'Supino Reto com Barra', sets: 3, reps: '8-12', rest: 90, targetMuscle: 'Peito' },
-            { name: 'Crucifixo Inclinado com Halteres', sets: 3, reps: '10-12', rest: 120, targetMuscle: 'Peito' },
-            { name: 'Crossover (Polia Alta)', sets: 3, reps: '10-12', rest: 90, targetMuscle: 'Peito' },
-            { name: 'Tríceps Testa com Barra', sets: 4, reps: '8-12', rest: 90, targetMuscle: 'Tríceps' },
+            { name: 'Supino Inclinado com Halteres', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Peito' },
+            { name: 'Supino Reto com Barra', sets: 4, reps: '8-12', rest: 90, targetMuscle: 'Peito' },
+            { name: 'Crucifixo Inclinado com Halteres', sets: 3, reps: '10-12', rest: 90, targetMuscle: 'Peito' },
+            { name: 'Crossover (Polia Alta)', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Peito' },
+            { name: 'Tríceps Testa Cross', sets: 4, reps: '8-12', rest: 90, targetMuscle: 'Tríceps' },
 			{ name: 'Tríceps Corda', sets: 4, reps: '8-12', rest: 90, targetMuscle: 'Tríceps' },
-            { name: 'Tríceps Coice (Unilateral)', sets: 3, reps: '8-10', rest: 90, targetMuscle: 'Tríceps' },
+            { name: 'Tríceps Coice (Unilateral)', sets: 4, reps: '8-10', rest: 90, targetMuscle: 'Tríceps' },
         ],
         LowerA: [
             { name: 'Agachamento Livre', sets: 4, reps: '8-12', rest: 120, targetMuscle: 'Pernas' },
             { name: 'Leg Press 45º', sets: 4, reps: '8-12', rest: 120, targetMuscle: 'Pernas' },
             { name: 'Cadeira Extensora', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Pernas' },
-			{ name: 'Afundo no Smith', sets: 3, reps: '10-12', rest: 90, targetMuscle: 'Pernas' },
-            { name: 'Cadeira Flexora', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Posteriores' },
-			{ name: 'Panturrilha em Sentado', sets: 4, reps: '15-20', rest: 90, targetMuscle: 'Panturrilhas' },
+			{ name: 'Afundo no Smith', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Pernas' },
+            { name: 'Aguachamento Hack', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Pernas' },
+			{ name: 'Panturrilha em Sentado', sets: 5, reps: '15-20', rest: 60, targetMuscle: 'Panturrilhas' },
         ],
         UpperB: [
             { name: 'Barra Fixa (ou Puxada Frontal)', sets: 4, reps: '8-12', rest: 90, targetMuscle: 'Costas' },
-            { name: 'Remada Curvada', sets: 3, reps: '10-12', rest: 90, targetMuscle: 'Costas' },
-            { name: 'Remada Baixa', sets: 3, reps: '10-12', rest: 90, targetMuscle: 'Costas' },
+            { name: 'Remada Curvada', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Costas' },
+            { name: 'Remada Baixa', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Costas' },
             { name: 'Pullover com Haltere', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Costas' },
             { name: 'Rosca Direta com Barra', sets: 4, reps: '10-15', rest: 90, targetMuscle: 'Bíceps' },
             { name: 'Rosca Scot', sets: 4, reps: '12-15', rest: 90, targetMuscle: 'Bíceps' },
-            { name: 'Rosca Inclinada com Halteres', sets: 3, reps: '10-12', rest: 90, targetMuscle: 'Bíceps' },
+            { name: 'Rosca Inclinada com Halteres', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Bíceps' },
         ],
         LowerB: [
-            { name: 'Agachamento Sumô', sets: 3, reps: '10-12', rest: 90, targetMuscle: 'Glúteos' },
 			{ name: 'Stiff', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Posteriores' },
-			{ name: 'Cadeira Adutora', sets: 3, reps: '12-15', rest: 90, targetMuscle: 'Adutores' },
+			{ name: 'Cadeira Flexora', sets: 4, reps: '8-12', rest: 90, targetMuscle: 'Posteriores' },
+			{ name: 'Levantamento Terra', sets: 4, reps: '8-12', rest: 90, targetMuscle: 'Posteriores' },
             { name: 'Panturrilha em Pé', sets: 5, reps: '15-20', rest: 60, targetMuscle: 'Panturrilhas' },
 			{ name: 'Desenvolvimento Militar', sets: 3, reps: '8-12', rest: 90, targetMuscle: 'Ombros' },
 			{ name: 'Elevação Lateral com Halteres', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Ombros' },
