--- a/index.html
+++ b/index.html
@@ -572,18 +572,18 @@
             { name: 'Barra Fixa (ou Puxada Frontal)', sets: 4, reps: '8-12', rest: 90, targetMuscle: 'Costas' },
             { name: 'Remada Curvada', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Costas' },
             { name: 'Remada Baixa', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Costas' },
-            { name: 'Pullover com Haltere', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Costas' },
+            { name: 'Remada Cavalinho Pegada Aberta', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Costas' },
             { name: 'Rosca Direta com Barra', sets: 4, reps: '10-15', rest: 90, targetMuscle: 'Bíceps' },
             { name: 'Rosca Scot', sets: 4, reps: '12-15', rest: 90, targetMuscle: 'Bíceps' },
             { name: 'Rosca Inclinada com Halteres', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Bíceps' },
         ],
         LowerB: [
-            { name: 'Stiff', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Posteriores' },
-            { name: 'Cadeira Flexora', sets: 4, reps: '8-12', rest: 90, targetMuscle: 'Posteriores' },
-            { name: 'Levantamento Terra', sets: 4, reps: '8-12', rest: 90, targetMuscle: 'Posteriores' },
+            { name: 'Stiff', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Posteriores' },
+            { name: 'Cadeira Flexora', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Posteriores' },
+            { name: 'Levantamento Terra', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Posteriores' },
             { name: 'Panturrilha em Pé', sets: 5, reps: '15-20', rest: 60, targetMuscle: 'Panturrilhas' },
             { name: 'Desenvolvimento Militar', sets: 3, reps: '8-12', rest: 90, targetMuscle: 'Ombros' },
-            { name: 'Elevação Lateral com Halteres', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Ombros' },
+            { name: 'Elevação Lateral com Halteres', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Ombros' },
             { name: 'Elevação Frontal com Halteres', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Ombros' },
             { name: 'Encolhimento com Halteres', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Trapézio' },
         ]
