--- a/index.html
+++ b/index.html
@@ -481,12 +481,12 @@
             <button class="tab-button active" onclick="showWorkout('UpperA')">Superiores A</button>
             <button class="tab-button" onclick="showWorkout('LowerA')">Inferiores A</button>
             <button class="tab-button" onclick="showWorkout('UpperB')">Superiores B</button>
-            <button class="tab-button" onclick="showWorkout('LowerB')">Inferiores B</button>
+            <button class="tab-button" onclick="showWorkout('UpperC')">Superiores C</button>
         </div>
         <div id="workout-UpperA" class="workout-plan active"></div>
         <div id="workout-LowerA" class="workout-plan"></div>
         <div id="workout-UpperB" class="workout-plan"></div>
-        <div id="workout-LowerB" class="workout-plan"></div>
+        <div id="workout-UpperC" class="workout-plan"></div>
     </div>
     
     <div id="toast-container"></div>
@@ -507,7 +507,7 @@
                         <option value="UpperA">Superiores A</option>
                         <option value="LowerA">Inferiores A</option>
                         <option value="UpperB">Superiores B</option>
-                        <option value="LowerB">Inferiores B</option>
+                        <option value="UpperC">Superiores C</option>
                     </select>
                     <button class="btn-reset" onclick="resetToDefaultWorkouts()">Restaurar Padrão</button>
                 </div>
@@ -552,40 +552,40 @@
     // 1. Definição Padrão (Backup)
     const DEFAULT_WORKOUTS = {
         UpperA: [
-            { name: 'Supino Inclinado com Halteres', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Peito' },
-            { name: 'Supino Reto com Barra', sets: 4, reps: '8-12', rest: 90, targetMuscle: 'Peito' },
-            { name: 'Crucifixo Inclinado com Halteres', sets: 3, reps: '10-12', rest: 90, targetMuscle: 'Peito' },
-            { name: 'Crossover (Polia Alta)', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Peito' },
-            { name: 'Tríceps Testa Cross', sets: 4, reps: '8-12', rest: 90, targetMuscle: 'Tríceps' },
-            { name: 'Tríceps Corda', sets: 4, reps: '8-12', rest: 90, targetMuscle: 'Tríceps' },
-            { name: 'Tríceps Coice (Unilateral)', sets: 4, reps: '8-10', rest: 90, targetMuscle: 'Tríceps' },
+            { name: 'Supino Inclinado com Halteres', sets: 4, reps: '8-12', rest: 90, targetMuscle: 'Peito' },
+            { name: 'Supino Reto com Halteres', sets: 4, reps: '8-12', rest: 120, targetMuscle: 'Peito' },
+            { name: 'Supino Reto Sentado', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Peito' },
+            { name: 'Crucifixo Máquina ou Crossover', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Peito' },
+            { name: 'Desenvolvimento Militar', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Ombros' },
+            { name: 'Elevação Lateral com Halteres', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Ombros' },
+            { name: 'Crucifixo Inverso', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Ombros' },
         ],
         LowerA: [
+            { name: 'Cadeira Extensora', sets: 4, reps: '12-15', rest: 120, targetMuscle: 'Pernas' },
             { name: 'Agachamento Livre', sets: 4, reps: '8-12', rest: 120, targetMuscle: 'Pernas' },
-            { name: 'Leg Press 45º', sets: 4, reps: '8-12', rest: 120, targetMuscle: 'Pernas' },
-            { name: 'Cadeira Extensora', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Pernas' },
-            { name: 'Afundo no Smith', sets: 3, reps: '10-12', rest: 90, targetMuscle: 'Pernas' },
-            { name: 'Agachamento Hack', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Pernas' },
-            { name: 'Panturrilha Sentado', sets: 5, reps: '15-20', rest: 60, targetMuscle: 'Panturrilhas' },
+            { name: 'Leg Press 45º', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Pernas' },
+            { name: 'Cadeira Flexora', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Pernas' },
+            { name: 'Stiff', sets: 3, reps: '10-12', rest: 60, targetMuscle: 'Pernas' },
+            { name: 'Panturrilha em Pé', sets: 5, reps: '15-20', rest: 60, targetMuscle: 'Panturrilhas' },
+            { name: 'Prancha', sets: 3, reps: '99', rest: 60, targetMuscle: 'Ombros' },
         ],
         UpperB: [
-            { name: 'Barra Fixa (ou Puxada Frontal)', sets: 4, reps: '8-12', rest: 90, targetMuscle: 'Costas' },
-            { name: 'Remada Curvada', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Costas' },
-            { name: 'Remada Baixa', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Costas' },
-            { name: 'Remada Cavalinho Pegada Aberta', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Costas' },
-            { name: 'Rosca Direta com Barra', sets: 4, reps: '10-15', rest: 90, targetMuscle: 'Bíceps' },
-            { name: 'Rosca Scot', sets: 4, reps: '12-15', rest: 90, targetMuscle: 'Bíceps' },
-            { name: 'Rosca Inclinada com Halteres', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Bíceps' },
+            { name: 'Puxada Alta (Pulldown)', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Costas' },
+            { name: 'Puxada Articulada ou Triângulo', sets: 3, reps: '10-12', rest: 60, targetMuscle: 'Costas' },
+            { name: 'Remada Curvada', sets: 4, reps: '8-10', rest: 60, targetMuscle: 'Costas' },
+            { name: 'Remada Cavalinho Pegada Aberta', sets: 3, reps: '10-12', rest: 90, targetMuscle: 'Costas' },
+            { name: 'Pullover na Polia Alta', sets: 4, reps: '12-15', rest: 90, targetMuscle: 'Costas' },
+            { name: 'Hiperextensão Lombar (Banco Romano)', sets: 3, reps: '15', rest: 60, targetMuscle: 'Costas' },
+            { name: 'Cardio', sets: 1, reps: '99', rest: 600, targetMuscle: 'Cardio' },
         ],
-        LowerB: [
-            { name: 'Stiff', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Posteriores' },
-            { name: 'Cadeira Flexora', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Posteriores' },
-            { name: 'Levantamento Terra', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Posteriores' },
-            { name: 'Panturrilha em Pé', sets: 5, reps: '15-20', rest: 60, targetMuscle: 'Panturrilhas' },
-            { name: 'Desenvolvimento Militar', sets: 3, reps: '8-12', rest: 90, targetMuscle: 'Ombros' },
-            { name: 'Elevação Lateral com Halteres', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Ombros' },
-            { name: 'Elevação Frontal com Halteres', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Ombros' },
-            { name: 'Encolhimento com Halteres', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Trapézio' },
+        UpperC: [
+            { name: 'Rosca Direta com Barra', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Bíceps' },
+            { name: 'Rosca Inclinada com Halteres', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Bíceps' },
+            { name: 'Rosca Scot', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Bíceps' },
+            { name: 'Tríceps Inverso', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Tríceps' },
+            { name: 'Tríceps Frances', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Tríceps' },
+            { name: 'Tríceps nas Paralelas', sets: 4, reps: '12', rest: 60, targetMuscle: 'Tríceps' },
+            { name: 'Prancha', sets: 3, reps: '99', rest: 60, targetMuscle: 'Ombros' },
         ]
     };
 
@@ -594,7 +594,7 @@
 
     const VARIATION_THRESHOLD = 12; 
     const WORKOUT_NAMES = {
-        UpperA: "Superiores A", LowerA: "Inferiores A", UpperB: "Superiores B", LowerB: "Inferiores B"
+        UpperA: "Superiores A", LowerA: "Inferiores A", UpperB: "Superiores B", UpperC: "Superiores C"
     };
 
     // Objeto de mapeamento para cores de músculos para variáveis CSS
