--- a/index.html
+++ b/index.html
@@ -559,15 +559,17 @@
             { name: 'Desenvolvimento Militar', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Ombros' },
             { name: 'Elevação Lateral com Halteres', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Ombros' },
             { name: 'Crucifixo Inverso', sets: 4, reps: '10-12', rest: 60, targetMuscle: 'Ombros' },
+            { name: 'Cardio', sets: 1, reps: '99', rest: 600, targetMuscle: 'Cardio' },
         ],
         LowerA: [
             { name: 'Cadeira Extensora', sets: 4, reps: '12-15', rest: 120, targetMuscle: 'Pernas' },
             { name: 'Agachamento Livre', sets: 4, reps: '8-12', rest: 120, targetMuscle: 'Pernas' },
             { name: 'Leg Press 45º', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Pernas' },
+            { name: 'Cadeira Abdutora', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Pernas' },
             { name: 'Cadeira Flexora', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Pernas' },
             { name: 'Stiff', sets: 3, reps: '10-12', rest: 60, targetMuscle: 'Pernas' },
             { name: 'Panturrilha em Pé', sets: 5, reps: '15-20', rest: 60, targetMuscle: 'Panturrilhas' },
-            { name: 'Prancha', sets: 3, reps: '99', rest: 60, targetMuscle: 'Ombros' },
+            { name: 'Prancha', sets: 3, reps: '99', rest: 60, targetMuscle: 'Abdominal' },
         ],
         UpperB: [
             { name: 'Puxada Alta (Pulldown)', sets: 4, reps: '10-12', rest: 90, targetMuscle: 'Costas' },
@@ -585,7 +587,7 @@
             { name: 'Tríceps Inverso', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Tríceps' },
             { name: 'Tríceps Frances', sets: 4, reps: '8-12', rest: 60, targetMuscle: 'Tríceps' },
             { name: 'Tríceps nas Paralelas', sets: 4, reps: '12', rest: 60, targetMuscle: 'Tríceps' },
-            { name: 'Prancha', sets: 3, reps: '99', rest: 60, targetMuscle: 'Ombros' },
+            { name: 'Prancha', sets: 3, reps: '99', rest: 60, targetMuscle: 'Abdominal' },
         ]
     };
 
